--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Aula</title>
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
-  <style>
-    html,body{height:100%;margin:0;background:#fff}
-    .wrap{max-width:1000px;margin:0 auto;padding:12px}
-    .player{aspect-ratio:16/9;border-radius:12px;overflow:hidden;box-shadow:0 8px 25px rgba(0,0,0,.12)}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <div class="player">
-      <div id="player" data-plyr-provider="youtube" data-plyr-embed-id="DiPIPaFY4A0"></div>
-    </div>
-  </div>
+<script>
+  const player = new Plyr('#player', {
+    controls: [
+      'play', 'progress', 'current-time', 'mute', 'volume', 'settings', 'fullscreen'
+    ],
+    // Velocidade (isso aparece no menu de "settings")
+    speed: {
+      selected: 1,
+      options: [0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]
+    },
+    // Legendas (se tiver track)
+    captions: { active: false, update: true, language: 'pt' },
 
-  <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
-  <script>
-    const player = new Plyr('#player', {
-      controls: ['play','progress','current-time','mute','volume','fullscreen'],
-      clickToPlay: true,
-      keyboard: { global: false },
-      youtube: { noCookie: true, modestbranding: 1, rel: 0, iv_load_policy: 3 }
-    });
-  </script>
-</body>
-</html>
+    // YouTube
+    youtube: {
+      noCookie: true,
+      modestbranding: 1,
+      rel: 0,
+      iv_load_policy: 3,
+      playsinline: 1,
+      hl: 'pt-BR'
+    },
+
+    // Qualidade: YouTube não suporta via Plyr (deixa claro)
+    quality: { enabled: false }
+  });
+</script>
